# riosaude_procedimento_sigtap

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/pipeline/: pipeline_tb_procedimento.py
